# clfts_gpu

./: CMakeLists.txt  GPUkernels.h  README.md  clfts_params.h  clfts_simulation.h  comp_gpu.sh  diblock.h  file_IO.h  fts_gpu_thrust.cu  input  langevin_cmplx.h  minusK_lookup.h  order_parameter.h  step.h  strFuncCmplx.h
src/: clfts_gpu_thrust.cu  clfts_params.h  diblock.h  file_IO.h  langevin_cmplx.h  sorts.h  strFuncCmplx.h
tools/: _make_vtk_cmplx.sh  make_vtk_cmplx.sh
